# xpemlflow

./: .gitignore  pyproject.toml  rest.http
.github/workflows/: ci.yml
mlruns/0/: meta.yaml
mlruns/798127431600439669/: meta.yaml
mlruns/798127431600439669/6f3ab4a32aef4faab447c231e3b79316/: meta.yaml
mlruns/798127431600439669/6f3ab4a32aef4faab447c231e3b79316/artifacts/random_forest_model/: MLmodel
mlruns/798127431600439669/6f3ab4a32aef4faab447c231e3b79316/metrics/: accuracy
mlruns/798127431600439669/6f3ab4a32aef4faab447c231e3b79316/tags/: mlflow.log-model.history  mlflow.runName
mlruns/798127431600439669/a58b826602dc42bebf1be823e8ceb357/: meta.yaml
mlruns/798127431600439669/a58b826602dc42bebf1be823e8ceb357/artifacts/random_forest_model/: MLmodel
mlruns/798127431600439669/a58b826602dc42bebf1be823e8ceb357/metrics/: accuracy
mlruns/798127431600439669/a58b826602dc42bebf1be823e8ceb357/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit
